# GenerateRandomSolution

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
Examples/: example_01.py  example_02.py
examples/: fcc.lmp
src/GenerateRandomSolidSolution/: GenerateRandomSolidSolution.py  __init__.py
src/GenerateRandomSolution/: __init__.py
tests/: test_modifier.py
