[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GenerateRandomSolution"
version = "2023.0"
description = "OVITO Python modifier to chang the particle type values to create a random solution of a given composition."
keywords = ["ovito", "python-modifier"]
authors = [{name = "Daniel Utt", email = "utt@ovito.org"}]
maintainers = [{name = "Daniel Utt", email = "utt@ovito.org"}]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ovito >= 3.9.1"
]

[project.urls]
repository = "https://github.com/nnn911/GenerateRandomSolution"

[project.entry-points.'OVITO.Modifier']
"Generate Random Solution" = "GenerateRandomSolution:GenerateRandomSolution"
