[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GenerateRandomSolution"
version = "2025.1"
description = "OVITO Python modifier to chang the particle type values to create a random solution of a given composition."
keywords = ["ovito", "ovito-extension"]
authors = [{name = "Daniel Utt", email = "utt@ovito.org"}]
maintainers = [{name = "Daniel Utt", email = "utt@ovito.org"}]
license = MIT
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ovito >= 3.9.1"
]

[project.urls]
repository = "https://github.com/ovito-org/GenerateRandomSolution"

[project.entry-points.'OVITO.Modifier']
"Generate Random Solution" = "GenerateRandomSolution:GenerateRandomSolution"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]
